# ServiceProject

./: docker-compose.yml
fastapi_api_pg/: Dockerfile  main.py  pyproject.toml  requirements.txt
task_django_p8/: .gitignore  Dockerfile  Makefile  entrypoint.sh  pyproject.toml  requirements.txt
task_django_p8/apps/: admin.py  apps.py  client_admin.py  documents.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
task_django_p8/apps/migrations/: 0001_initial.py
task_django_p8/root/: settings.py  urls.py
task_django_p8/templates/admin/: base_site.html  change_list.html
