[tool.poetry]
name = "task-django-p8"
version = "0.1.0"
description = ""
authors = ["xolmomin <xolmomin@gmail.com>"]
readme = "README.md"
packages = [{include = "root"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
pillow = "^9.5.0"
django-mptt = "^0.14.0"
pyyaml = "^6.0"
ujson = "^5.7.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
drf-social-oauth2 = "^2.1.1"
django-redis = "^5.2.0"
django-redis-cache = "^3.0.1"
django-elasticsearch-dsl = "^7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
